--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
         </dependency>
@@ -64,6 +70,9 @@
             <version>4.13</version>
             <scope>test</scope>
         </dependency>
+
+
+
 
 
         <dependency>
